# android-adb-backup-wifi

./: .gitignore  PROJECT_COMPLETE_SUMMARY.md  PROJECT_SUMMARY.md  README.md  WORK_SUMMARY.md  launcher.py  pyproject.toml
.github/workflows/: build-windows.yml
src/android_backup_desktop/: __init__.py  __main__.py  adb.py  backup.py  gui.py  logging_utils.py  models.py
tests/: test_backup_restore_security.py  test_cancel_and_performance.py  test_gui_threading.py  test_none_handling.py  test_parsers.py
